--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-334.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇰🇷 韩国-4.78MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-489.9KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-320.0KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇺🇸 美国-284.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-169.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-442.6KB/s(Youtube:不良林), server: hk11.bp777.buzz, port: 21665, type: vmess, uuid: fe926023-3ad8-4b4e-847c-eacf29fc07d8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk11.bp777.buzz}}
+  - {name: 🇬🇧 英国-1.26MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-280.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: cc4.qweasdzxc.gq, port: 45747, type: ss, cipher: chacha20-ietf-poly1305, password: 6ThhE43itV3}
   - {name: 🇸🇬 新加坡-3.33MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-641.7KB/s(Youtube:不良林), server: 43.134.229.238, port: 46043, type: vmess, uuid: b5770696-55be-4d23-a28e-8a1ab771dd7d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-386.6KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-169.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-442.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-641.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
