--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-352.9KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-497.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: cc4.qweasdzxc.gq, port: 45747, type: ss, cipher: chacha20-ietf-poly1305, password: 6ThhE43itV3}
-  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-3.33MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-405.6KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇸🇬 新加坡-3.23MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-478.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-536.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.72MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 未知国家-3.41MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
-      - 未知国家-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
